# scn

./: .env.example  .gitignore  Justfile  LICENCE.txt  README.md  gunicorn_config.py  manage.py  package-lock.json  package.json  pyproject.toml  readme.md  requirements.txt  tailwind.config.js
apps/community/: admin.py  constants.py  wagtail_hooks.py
apps/content/: blocks.py  context_processors.py
apps/core/: middleware.py  urls.py  views.py  wsgi.py
apps/interactions/: notes.md
apps/music/: admin.py  admin_views.py  apps.py  blocks.py  urls.py  views.py  wagtail_hooks.py
choristes/: admin.py  blocks.py  models.py  wagtail_hooks.py
choristes/migrations/: 0001_initial.py  0002_remove_morceaupage_body_morceaupage_audios_and_more.py  0002_rename_repetition_evenement_is_repetition_and_more.py  0003_alter_morceaupage_descr.py  0003_remove_calendrierpage_calendrier_image_and_more.py  0003_remove_calendrierpage_how_many_events_and_more.py  0004_calendriereventpage_calendrierpage.py  0004_choirrole_alter_choriste_options_and_more.py  0004_morceaupage_activer_timecodes_morceaupage_timecodes.py  0005_calendriereventpage_body_calendriereventpage_date_and_more.py  0005_choirrole_alter_choriste_options_choriste_active_and_more.py  0006_alter_evenement_fields.py  (+9 more)
code_removed/: calendar_model_old.py
config/: Dockerfile  package-lock.json  package.json  tailwind.config.js
home/: blocks.py  context_processors.py  models.py
management/: factories.py
meta/: changelog_v_2_0.txt  milestones.md  todo.md
scn_website/: urls.py  wsgi.py
static/: staticfiles.json
(+184 files in other folders)
